--- a/chamber/join.html
+++ b/chamber/join.html
@@ -20,56 +20,125 @@
         <link rel="stylesheet" href="styles/medium.css">
         <link rel="stylesheet" href="styles/large.css">
         <title>Join Kaysville City</title>
-
     </head>
 </head>
 
 <body>
+
+    <header class="mainHeader">
+        <div id="banner"></div>
+        <ul class="headItems">
+            <!-- this is the placeholder logo-->
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <h1>Kaysville City Chamber of Commerce</h1>
+            <div class="socialStuff">
+                <!-- icons -->
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                        alt="link to facebook website"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
+                        alt="link to linkedin website"></a>
+            </div>
+        </ul>
+        <!-- navigation bar -->
+        <nav class="navbar main-navigation">
+
+            <ul id="primaryNav">
+                <button onclick="toggleMenu()">&#9776;</button>
+                <li class="nav-item"><a class="active" href="">Home</a></li>
+                <li class="nav-item"><a href="">Discover</a></li>
+                <li class="nav-item"><a href="">Directory</a></li>
+                <li class="nav-item"><a href="">Join</a></li>
+                <li class="nav-item"><a href="">Contact</a></li>
+            </ul>
+
+        </nav>
+        <div class="currentDate"><span id="yearNow"></span> </div>
+    </header>
+
     <section class="mainForm firstForm">
         <form action="thankyou.html">
-            <label for="fname">First name: </label><br>
-            <input type="text" id="fname" name="fname" placeholder="firstname" required><br>
+            <label for="fname">First name: </label>
+            <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
 
-            <label for="lname">Last name: </label><br>
-            <input type="text" name="lname" id="lname" placeholder="lastname" required>
+            <label for="lname">Last name: </label>
+            <input type="text" name="lname" id="lname" class="required" placeholder="lastname" required>
 
-            <label for="bposition">Business position "please type in a minimum of 7 alpha characters " </label><br>
-            <input type="text" name="bposition" id="bposition" placeholder="business position" pattern="[- a-zA-Z]{7,}" >
+            <label for="bposition">Business position "please type in a minimum of 7 alpha characters " </label>
+            <input type="text" name="bposition" id="bposition" placeholder="business position" pattern="[- a-zA-Z]{7,}">
 
-            <label for="mail">Email:</label><br>
-            <input type="email" name="mail" id="email" placeholder="something@gmail.com" required>
+            <label for="mail">Email:</label>
+            <input type="email" name="mail" id="email" class="required" placeholder="something@gmail.com" required>
 
-            <label for="mphone">Cell phone:</label><br>
-            <input type="tel" name="mphone" id="mphone" placeholder="(555)867-5309" required>
+            <label for="mphone">Cell phone:</label>
+            <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
 
-            <label for="busname">Business Title:</label><br>
-            <input type="text" name="busname" id="busname" placeholder="business title" required><br>
+            <label for="busname">Business Title:</label>
+            <input type="text" name="busname" id="busname" class="required" placeholder="business title" required>
 
             <p>Membership level:</p>
+            <hr>
 
-            <input type="radio" id="NPMembership" name="radiobutton">
-            <label for="NPMembership">N/A Membership</label><br>
+            <label for="NPMembership" class="memLab">N/A Membership
+                <input type="radio" id="NPMembership" class="mem" name="radiobutton">
 
-            <input type="radio" id="bronzeMem" name="radiobutton">
-            <label for="bronzeMem">Bronze Membership</label><br>
+            </label>
 
-            <input type="radio" id="silverMem" name="radiobutton">
-            <label for="silverMem">Silver Membership</label><br>
+            <label for="bronzeMem" class="memLab">Bronze Membership
+                <input type="radio" id="bronzeMem" class="mem" name="radiobutton">
 
-            <input type="radio" id="goldMem" name="radiobutton">
-            <label for="goldMem">Gold Membership</label><br>
-
+            </label>
 
 
-            <label for="textarea">Business Description:</label><br>
-            <textarea name="description" placeholder="Type here" id="description" cols="40" rows="10"></textarea>
+            <label for="silverMem" class="memLab">Silver Membership
+                <input type="radio" id="silverMem" class="mem" name="radiobutton">
+            </label>
+
+            <label for="goldMem" class="memLab">Gold Membership
+                <input type="radio" id="goldMem" class="mem" name="radiobutton">
+
+            </label>
+            <hr>
 
 
-            <input type="hidden" id="hidetime" name="hidetime"> <br>
+
+            <label for="textarea">Business Description:
+                <textarea name="description" placeholder="Type here" id="description"></textarea>
+            </label>
+
+            <input type="hidden" id="hidetime" name="hidetime">
 
             <input type="submit" value="Complete form">
         </form>
     </section>
+
+    <footer>
+        <!-- section 1 logo and address info -->
+        <div class="logoInfo">
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </div>
+
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-546-1235</p>
+            <p>&#128506; Location Map</p>
+        </div>
+
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
+                | Last Updated:<span id="modded"></span></div>
+            <script src="scripts/script.js"></script>
+            <script src="scripts/menu.js"></script>
+            <script src="scripts/windchill.js"></script>
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
