--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li class="lesson">Lesson 7 <a href="lesson-7/lazyload.html" class="link">Lazy Load Lesson</a></li>
       <li class="lesson">Lesson 8 <a href="chamber/discover.html" class="link">Discover Page Assignment</a></li>
       <li class="lesson">Lesson 9 <a href="lesson-8/tablebuild.html" class="link">HTML Tables Assignment</a></li>
-      <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 10 <a href="chamber/join.html" class="link">Join Kaysville City Chamber of Commerce</a></li>
       <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
     </ol>
