added btn class and styled the button to look somewhat decent

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -107,7 +107,7 @@
 
             <input type="hidden" id="hidetime" name="hidetime">
 
-            <input type="submit" value="Complete form">
+            <input type="submit" value="Complete form" class="btn">
         </form>
     </section>
 
