--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/prophets.css">
-    <script src="scripts/prophets.js" defer></script>
+    <!-- <script src="scripts/prophets.js" defer></script> -->
 </head>
 <body>
     <header>
