adding name on html and using tliteral

--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -16,7 +16,7 @@
         <div class="cards"></div>
       </main>
       <footer>
-        Your name here | 🏛 BYU-Idaho | WDD 230
+        Nick Richards | 🏛 BYU-Idaho | WDD 230
       </footer>
       <script src="scripts/prophets.js"></script>
     
