added to main index, adjusted dimentions in js, added style

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li class="lesson">Lesson 8 <a href="chamber/discover.html" class="link">Discover Page Assignment</a></li>
       <li class="lesson">Lesson 9 <a href="lesson-8/tablebuild.html" class="link">HTML Tables Assignment</a></li>
       <li class="lesson">Lesson 10 <a href="chamber/join.html" class="link">Join Kaysville City Chamber of Commerce</a></li>
-      <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
+      <li class="lesson">week 9 work <a href="lesson-9/prophets.html" class="link">Prophets JSON Assignment</a></li>
       <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
     </ol>
     <hr>
