adding footer and removing whitespace

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -78,6 +78,34 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/lastvisit.js"></script>
 
+    <footer>
+        <!-- section 1 logo and address info -->
+        <div class="logoInfo">
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </div>
+
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-546-1235</p>
+            <p>&#128506; Location Map</p>
+        </div>
+
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
+                | Last Updated:<span id="modded"></span></div>
+            <script src="scripts/script.js"></script>
+            <script src="scripts/menu.js"></script>
+            <script src="scripts/windchill.js"></script>
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
