--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,7 +50,7 @@
         <nav class="navbar main-navigation">
 
             <ul id="primaryNav">
-                <button onclick="toggleMenu()">&#9776;</button>
+                <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
                 <li class="nav-item"><a class="active" href="">Home</a></li>
                 <li class="nav-item"><a href="">Discover</a></li>
                 <li class="nav-item"><a href="">Directory</a></li>
