replacing icon png with webp

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,7 +40,7 @@
             <h1>Kaysville City Chamber of Commerce</h1>
             <div class="socialStuff">
                 <!-- icons -->
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46"
                         alt="link to facebook website"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
                         alt="link to linkedin website"></a>
