adjusting directory json

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    <script src="" defer></script>
+    <script src="scripts/directory.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Local Businesses</h1>
       </header>
       <main>
-        <div class="cards list"></div>
+        <div class="cards"></div>
       </main>
       <footer>
         Nick Richards | 🏛 BYU-Idaho | WDD 230
