adding header and footer to directory index and removing sweeping up commented code in discover index

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -2,33 +2,22 @@
 <html lang="en">
 
 <head>
-    <!-- <meta charset="UTF-8">
+    <!-- meta tags -->
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover</title>
+    <meta name="description" content=" the Kaysville city chamber of commerce website assignment for WDD 230">
+    <!-- links -->
+    <link rel="shortcut icon" href="../government-favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <!-- css stuff -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css"> -->
-
-        <!-- meta tags -->
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content=" the Kaysville city chamber of commerce website assignment for WDD 230">
-        <!-- links -->
-        <link rel="shortcut icon" href="../government-favicon.ico">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
-        <!-- css stuff -->
-        <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/base.css">
-        <link rel="stylesheet" href="styles/medium.css">
-        <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/large.css">
     <title>Kaysville City Chamber of discovery images</title>
-
-
 </head>
 
 <body>
@@ -61,6 +50,7 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
+    
     <h1>Kaysville City</h1>
     <p><span class="label"> Number of visits: </span><span class="visits"></span></p>
     <hr>
@@ -68,11 +58,26 @@
 
     <section class="pictures">
         <!-- images need to be 300 x 400 pixels -->
-        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-1.webp" width="1200" height="627" alt=""><figcaption>Image of a river with a mountain</figcaption> </figure>
-        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-2.webp" width="1200" height="627" alt=""><figcaption>Road going through a mountain canyon</figcaption> </figure>
-        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-3.webp" width="1200" height="627" alt=""><figcaption>Iconic mountains in Monument Valley</figcaption> </figure>
-        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-4.webp" width="1200" height="627" alt=""><figcaption>Zion National park in the evening</figcaption> </figure>
-        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-5.webp" width="1200" height="627" alt=""><figcaption>Logan Utah</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-1.webp"
+                width="1200" height="627" alt="">
+            <figcaption>Image of a river with a mountain</figcaption>
+        </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-2.webp"
+                width="1200" height="627" alt="">
+            <figcaption>Road going through a mountain canyon</figcaption>
+        </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-3.webp"
+                width="1200" height="627" alt="">
+            <figcaption>Iconic mountains in Monument Valley</figcaption>
+        </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-4.webp"
+                width="1200" height="627" alt="">
+            <figcaption>Zion National park in the evening</figcaption>
+        </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/768x402" data-src="images/picture-5.webp"
+                width="1200" height="627" alt="">
+            <figcaption>Logan Utah</figcaption>
+        </figure>
     </section>
     <script src="scripts/lazyload.js"></script>
     <script src="scripts/menu.js"></script>
@@ -81,7 +86,8 @@
     <footer>
         <!-- section 1 logo and address info -->
         <div class="logoInfo">
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
             <p>Kaysville City Chamber of Commerce</p>
             <p>23 East Center Street</p>
             <p> Kaysville, UT 84037</p>
