--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,15 +12,66 @@
     <script src="scripts/directory.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Local Businesses</h1>
-      </header>
+  <header class="mainHeader">
+    <div id="banner"></div>
+    <ul class="headItems">
+        <!-- this is the placeholder logo-->
+        <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+        <h1>Kaysville City Chamber of Commerce</h1>
+        <div class="socialStuff">
+            <!-- icons -->
+            <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46"
+                    alt="link to facebook website"></a>
+            <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
+                    alt="link to linkedin website"></a>
+        </div>
+    </ul>
+    <!-- navigation bar -->
+    <nav class="navbar main-navigation">
+
+        <ul id="primaryNav">
+            <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
+            <li class="nav-item"><a class="active" href="">Home</a></li>
+            <li class="nav-item"><a href="">Discover</a></li>
+            <li class="nav-item"><a href="">Directory</a></li>
+            <li class="nav-item"><a href="">Join</a></li>
+            <li class="nav-item"><a href="">Contact</a></li>
+        </ul>
+
+    </nav>
+    <div class="currentDate"><span id="yearNow"></span> </div>
+</header>
       <main>
         <div class="cards"></div>
       </main>
       <footer>
-        Nick Richards | 🏛 BYU-Idaho | WDD 230
-      </footer>
+        <!-- section 1 logo and address info -->
+        <div class="logoInfo">
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </div>
+
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-546-1235</p>
+            <p>&#128506; Location Map</p>
+        </div>
+
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
+                | Last Updated:<span id="modded"></span></div>
+            <script src="scripts/script.js"></script>
+            <script src="scripts/menu.js"></script>
+            <script src="scripts/windchill.js"></script>
+
+        </div>
+    </footer>
 
 </body>
 </html>
