adding images and updating comments and adjusting contrast

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
     <div class="currentDate"><span id="yearNow"></span> </div>
 </header>
       <main>
-        <div class="cards"></div>
+        <div class="cards list"></div>
       </main>
       <footer>
         <!-- section 1 logo and address info -->
@@ -68,8 +68,6 @@
                 | Last Updated:<span id="modded"></span></div>
             <script src="scripts/script.js"></script>
             <script src="scripts/menu.js"></script>
-            <script src="scripts/windchill.js"></script>
-
         </div>
     </footer>
 
