adding and removing elements in js and styling with css

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,12 @@
     <div class="currentDate"><span id="yearNow"></span></div>
 </header>
       <main>
-        <div class="cards list"></div>
+        <h1>Local Businesses</h1>
+        <div class="directButtons" >
+            <button class="gridbtn" >Grid</button>
+            <button class="listbtn" >List</button>
+        </div>
+        <div class="mainContent cards list"></div>
       </main>
       <footer>
         <!-- section 1 logo and address info -->
