added joinTime and weather file, commented out issues with windchill and join scripts

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -132,8 +132,7 @@
                 | Last Updated:<span id="modded"></span></div>
             <script src="scripts/script.js"></script>
             <script src="scripts/menu.js"></script>
-            <script src="scripts/windchill.js"></script>
-
+            <script src="scripts/joinTime.js"></script>
         </div>
     </footer>
 
