adding data to page

--- a/chamber/lesson-10/weather-api.html
+++ b/chamber/lesson-10/weather-api.html
@@ -42,15 +42,15 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span></div>
     </header>
-
-    <h1>OpenWeatherMap.org API Test</h1>
-    <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
-    <h2>Current Condition Icon</h2>
-    <figure>
-        <img src="" alt="" id="weather-icon" />
-        <figcaption></figcaption>
-    </figure>
-
+    <div class="content">
+        <h1>OpenWeatherMap.org API Test</h1>
+        <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
+        <h2>Current Condition Icon</h2>
+        <figure>
+            <img src="" alt="" id="weather-icon" />
+            <figcaption></figcaption>
+        </figure>
+    </div>
     <footer>
         <!-- section 1 logo and address info -->
         <div class="logoInfo">
