adding API lesson to main index

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <li class="lesson">Lesson 9 <a href="lesson-8/tablebuild.html" class="link">HTML Tables Assignment</a></li>
       <li class="lesson">Lesson 10 <a href="chamber/join.html" class="link">Join Kaysville City Chamber of Commerce</a>
       </li>
-      <li class="lesson">week 9 <a href="lesson-9/prophets.html" class="link">Prophets JSON Assignment</a> <a
+      <li class="lesson">Week 9 <a href="lesson-9/prophets.html" class="link">Prophets JSON Assignment</a> <a
           href="chamber/directory.html">Business Directory</a> </li>
-      <li class="lesson"><a href="" class="link"></a></li>
+      <li class="lesson">Week 10 <a href="chamber/lesson-10/weather-api.html" class="link">Weather API Assignment</a></li>
     </ol>
     <hr>
   </div>
