added links to headers in pages

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -44,11 +44,10 @@
 
             <ul id="primaryNav">
                 <button onclick="toggleMenu()">&#9776;</button>
-                <li class="nav-item"><a class="active" href="">Home</a></li>
-                <li class="nav-item"><a href="">Discover</a></li>
-                <li class="nav-item"><a href="">Directory</a></li>
-                <li class="nav-item"><a href="">Join</a></li>
-                <li class="nav-item"><a href="">Contact</a></li>
+                <li class="nav-item"><a class="active" href="index.html">Home</a></li>
+                <li class="nav-item"><a href="discover.html">Discover</a></li>
+                <li class="nav-item"><a href="directory.html">Directory</a></li>
+                <li class="nav-item"><a href="/index.html">Contact</a></li>
             </ul>
 
         </nav>
