--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
         <nav class="navbar main-navigation">
 
             <ul id="primaryNav">
-                <button onclick="toggleMenu()">&#9776;</button>
+                <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
                 <li class="nav-item"><a href="discover.html">Discover</a></li>
                 <li class="nav-item"><a href="directory.html">Directory</a></li>
                 <li class="nav-item"><a href="join.html">Join</a></li>
