--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,7 +74,7 @@
         <section class="weather">
             <h2>Weather</h2>
             <figure>
-                <img src="" alt="" id="weather-icon" />
+                <img src="#" alt="#" id="weather-icon">
                 <figcaption></figcaption>
             </figure>
             <p>Current Temperature: <span id="current-temp"></span></p>
