changed ul to div

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,7 +23,7 @@
 <body>
     <header class="mainHeader">
         <div id="banner"></div>
-        <ul class="headItems">
+        <div class="headItems">
             <!-- this is the placeholder logo-->
             <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>Kaysville City Chamber of Commerce</h1>
@@ -34,7 +34,7 @@
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
                         alt="link to linkedin website"></a>
             </div>
-        </ul>
+        </div>
         <!-- navigation bar -->
         <nav class="navbar main-navigation">
 
