--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
     <!-- header section -->
     <header class="mainHeader">
         <div id="banner"></div>
-        <ul class="headItems">
+        <div class="headItems">
             <!-- this is the placeholder logo-->
             <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>Kaysville City Chamber of Commerce</h1>
@@ -35,7 +35,7 @@
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
                         alt="link to linkedin website"></a>
             </div>
-        </ul>
+        </div>
         <!-- navigation bar -->
         <nav class="navbar main-navigation">
 
