added contact us page

--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -30,7 +30,7 @@
         <div class="headItems">
             <!-- this is the placeholder logo-->
             <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-            <h1>Kaysville City Chamber of Commerce</h1>
+            <h1>Contact Us</h1>
             <div class="socialStuff">
                 <!-- icons -->
                 <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
@@ -47,7 +47,7 @@
                 <li class="nav-item"><a class="active" href="index.html">Home</a></li>
                 <li class="nav-item"><a href="discover.html">Discover</a></li>
                 <li class="nav-item"><a href="directory.html">Directory</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
+                <li class="nav-item"><a href="join.html">Join</a></li>
             </ul>
 
         </nav>
@@ -62,48 +62,13 @@
             <label for="lname">Last name: </label>
             <input type="text" name="lname" id="lname" class="required" placeholder="lastname" required>
 
-            <label for="bposition">Business position "please type in a minimum of 7 alpha characters " </label>
-            <input type="text" name="bposition" id="bposition" placeholder="business position" pattern="[- a-zA-Z]{7,}">
-
             <label for="mail">Email:</label>
             <input type="email" name="mail" id="email" class="required" placeholder="something@gmail.com" required>
 
-            <label for="mphone">Cell phone:</label>
+            <label for="mphone">Phone number:</label>
             <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
 
-            <label for="busname">Business Title:</label>
-            <input type="text" name="busname" id="busname" class="required" placeholder="business title" required>
-
-            <p>Membership level:</p>
-            <hr>
-
-            <label for="NPMembership" class="memLab">N/A Membership
-                <input type="radio" id="NPMembership" class="mem" name="radiobutton">
-
-            </label>
-
-            <label for="bronzeMem" class="memLab">Bronze Membership
-                <input type="radio" id="bronzeMem" class="mem" name="radiobutton">
-
-            </label>
-
-
-            <label for="silverMem" class="memLab">Silver Membership
-                <input type="radio" id="silverMem" class="mem" name="radiobutton">
-            </label>
-
-            <label for="goldMem" class="memLab">Gold Membership
-                <input type="radio" id="goldMem" class="mem" name="radiobutton">
-
-            </label>
-            <hr>
-
-            <label for="textarea">Business Description:
-                <textarea name="description" placeholder="Type here" id="description"></textarea>
-            </label>
-
             <input type="hidden" id="hidetime" name="hidetime">
-
             <input type="submit" value="Complete form" class="btn">
         </form>
     </section>
@@ -111,7 +76,8 @@
     <footer>
         <!-- section 1 logo and address info -->
         <div class="logoInfo">
-            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
+            <img src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
             <p>Kaysville City Chamber of Commerce</p>
             <p>23 East Center Street</p>
             <p> Kaysville, UT 84037</p>
