--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,7 +34,7 @@
             <li class="nav-item"><a class="active" href="index.html">Home</a></li>
             <li class="nav-item"><a href="discover.html">Discover</a></li>
             <li class="nav-item"><a href="join.html">Join</a></li>
-            <li class="nav-item"><a href="/index.html">Contact</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
 
     </nav>
