--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,7 +43,7 @@
                 <li class="nav-item"><a class="active" href="index.html">Home</a></li>
                 <li class="nav-item"><a href="directory.html">Directory</a></li>
                 <li class="nav-item"><a href="join.html">Join</a></li>
-                <li class="nav-item"><a href="/index.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
