--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
                 <li class="nav-item"><a href="discover.html">Discover</a></li>
                 <li class="nav-item"><a href="directory.html">Directory</a></li>
                 <li class="nav-item"><a href="join.html">Join</a></li>
-                <li class="nav-item"><a href="/index.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
