added class for nav button

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -43,7 +43,7 @@
         <nav class="navbar main-navigation">
 
             <ul id="primaryNav">
-                <button onclick="toggleMenu()">&#9776;</button>
+                <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
                 <li class="nav-item"><a class="active" href="index.html">Home</a></li>
                 <li class="nav-item"><a href="discover.html">Discover</a></li>
                 <li class="nav-item"><a href="directory.html">Directory</a></li>
@@ -55,7 +55,7 @@
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
 
-    <h1>Thank you for your application. </h1>
+    <h1>Thank you for contacting us. </h1>
 
 
 
